speed up Lipschitz computation for linear constraints in y done.

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -75,8 +75,8 @@
        "      <th>cvxnonsep_normcon20r</th>\n",
        "      <td>40(10)</td>\n",
        "      <td>21(20)</td>\n",
-       "      <td>2.1262450218200684</td>\n",
-       "      <td>0.12497115135192871</td>\n",
+       "      <td>2.015106678009033</td>\n",
+       "      <td>0.07811188697814941</td>\n",
        "      <td>-14.6549272394</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
@@ -84,8 +84,8 @@
        "      <th>cvxnonsep_normcon30r</th>\n",
        "      <td>60(15)</td>\n",
        "      <td>31(30)</td>\n",
-       "      <td>2.3533456325531006</td>\n",
-       "      <td>0.09373354911804199</td>\n",
+       "      <td>1.9681425094604492</td>\n",
+       "      <td>0.0781407356262207</td>\n",
        "      <td>-14.8031228018</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
@@ -93,8 +93,8 @@
        "      <th>ex4</th>\n",
        "      <td>36(25)</td>\n",
        "      <td>30(25)</td>\n",
-       "      <td>3.8755712509155273</td>\n",
-       "      <td>0.09377622604370117</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.07814168930053711</td>\n",
        "      <td>-6.70152492653</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
@@ -102,8 +102,8 @@
        "      <th>ex1223a</th>\n",
        "      <td>7(4)</td>\n",
        "      <td>9(4)</td>\n",
-       "      <td>0.6386504173278809</td>\n",
-       "      <td>0.07814860343933105</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0781400203704834</td>\n",
        "      <td>6.06978727803</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
@@ -111,8 +111,8 @@
        "      <th>ringpack_10_1</th>\n",
        "      <td>70(50)</td>\n",
        "      <td>385(330)</td>\n",
-       "      <td>54.15729641914368</td>\n",
-       "      <td>0.5916244983673096</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6116049289703369</td>\n",
        "      <td>-4.17164353115092</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
@@ -120,8 +120,8 @@
        "      <th>smallinvDAXr1b150-165</th>\n",
        "      <td>31(30)</td>\n",
        "      <td>4(1)</td>\n",
-       "      <td>0.19010472297668457</td>\n",
-       "      <td>0.09376144409179688</td>\n",
+       "      <td>0.18745183944702148</td>\n",
+       "      <td>0.062482595443725586</td>\n",
        "      <td>224.691303163</td>\n",
        "      <td>-124.027294155</td>\n",
        "    </tr>\n",
@@ -131,23 +131,23 @@
       ],
       "text/plain": [
        "                         vars   constrs               time L  \\\n",
-       "cvxnonsep_normcon20r   40(10)    21(20)   2.1262450218200684   \n",
-       "cvxnonsep_normcon30r   60(15)    31(30)   2.3533456325531006   \n",
-       "ex4                    36(25)    30(25)   3.8755712509155273   \n",
-       "ex1223a                  7(4)      9(4)   0.6386504173278809   \n",
-       "ringpack_10_1          70(50)  385(330)    54.15729641914368   \n",
-       "smallinvDAXr1b150-165  31(30)      4(1)  0.19010472297668457   \n",
+       "cvxnonsep_normcon20r   40(10)    21(20)    2.015106678009033   \n",
+       "cvxnonsep_normcon30r   60(15)    31(30)   1.9681425094604492   \n",
+       "ex4                    36(25)    30(25)                    0   \n",
+       "ex1223a                  7(4)      9(4)                    0   \n",
+       "ringpack_10_1          70(50)  385(330)                    0   \n",
+       "smallinvDAXr1b150-165  31(30)      4(1)  0.18745183944702148   \n",
        "\n",
-       "                                  time SOR                obj    constr_value  \n",
-       "cvxnonsep_normcon20r   0.12497115135192871     -14.6549272394            -inf  \n",
-       "cvxnonsep_normcon30r   0.09373354911804199     -14.8031228018            -inf  \n",
-       "ex4                    0.09377622604370117     -6.70152492653            -inf  \n",
-       "ex1223a                0.07814860343933105      6.06978727803            -inf  \n",
-       "ringpack_10_1           0.5916244983673096  -4.17164353115092            -inf  \n",
-       "smallinvDAXr1b150-165  0.09376144409179688      224.691303163  -124.027294155  "
+       "                                   time SOR                obj    constr_value  \n",
+       "cvxnonsep_normcon20r    0.07811188697814941     -14.6549272394            -inf  \n",
+       "cvxnonsep_normcon30r     0.0781407356262207     -14.8031228018            -inf  \n",
+       "ex4                     0.07814168930053711     -6.70152492653            -inf  \n",
+       "ex1223a                  0.0781400203704834      6.06978727803            -inf  \n",
+       "ringpack_10_1            0.6116049289703369  -4.17164353115092            -inf  \n",
+       "smallinvDAXr1b150-165  0.062482595443725586      224.691303163  -124.027294155  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
