--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -73,55 +73,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>cvxnonsep_normcon20r</th>\n",
-       "      <td>40(10)</td>\n",
-       "      <td>21(20)</td>\n",
-       "      <td>2.015106678009033</td>\n",
-       "      <td>0.07811188697814941</td>\n",
+       "      <td>(40, 10, 0)</td>\n",
+       "      <td>(21, 20, 10, 10)</td>\n",
+       "      <td>1.3223440647125244</td>\n",
+       "      <td>0.0938119888305664</td>\n",
        "      <td>-14.6549272394</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cvxnonsep_normcon30r</th>\n",
-       "      <td>60(15)</td>\n",
-       "      <td>31(30)</td>\n",
-       "      <td>1.9681425094604492</td>\n",
-       "      <td>0.0781407356262207</td>\n",
+       "      <td>(60, 15, 0)</td>\n",
+       "      <td>(31, 30, 15, 15)</td>\n",
+       "      <td>1.8771684169769287</td>\n",
+       "      <td>0.09380459785461426</td>\n",
        "      <td>-14.8031228018</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ex4</th>\n",
-       "      <td>36(25)</td>\n",
-       "      <td>30(25)</td>\n",
+       "      <td>(36, 25, 25)</td>\n",
+       "      <td>(30, 25, 25, 0)</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.07814168930053711</td>\n",
+       "      <td>0.09373617172241211</td>\n",
        "      <td>-6.70152492653</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ex1223a</th>\n",
-       "      <td>7(4)</td>\n",
-       "      <td>9(4)</td>\n",
+       "      <td>(7, 4, 4)</td>\n",
+       "      <td>(9, 4, 4, 0)</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0781400203704834</td>\n",
+       "      <td>0.06250691413879395</td>\n",
        "      <td>6.06978727803</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ringpack_10_1</th>\n",
-       "      <td>70(50)</td>\n",
-       "      <td>385(330)</td>\n",
+       "      <td>(70, 50, 50)</td>\n",
+       "      <td>(385, 330, 330, 0)</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.6116049289703369</td>\n",
+       "      <td>0.6323020458221436</td>\n",
        "      <td>-4.17164353115092</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>smallinvDAXr1b150-165</th>\n",
-       "      <td>31(30)</td>\n",
-       "      <td>4(1)</td>\n",
-       "      <td>0.18745183944702148</td>\n",
-       "      <td>0.062482595443725586</td>\n",
+       "      <td>(31, 30, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>0.24251556396484375</td>\n",
+       "      <td>0.0624847412109375</td>\n",
        "      <td>224.691303163</td>\n",
        "      <td>-124.027294155</td>\n",
        "    </tr>\n",
@@ -130,24 +130,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                         vars   constrs               time L  \\\n",
-       "cvxnonsep_normcon20r   40(10)    21(20)    2.015106678009033   \n",
-       "cvxnonsep_normcon30r   60(15)    31(30)   1.9681425094604492   \n",
-       "ex4                    36(25)    30(25)                    0   \n",
-       "ex1223a                  7(4)      9(4)                    0   \n",
-       "ringpack_10_1          70(50)  385(330)                    0   \n",
-       "smallinvDAXr1b150-165  31(30)      4(1)  0.18745183944702148   \n",
+       "                               vars             constrs               time L  \\\n",
+       "cvxnonsep_normcon20r    (40, 10, 0)    (21, 20, 10, 10)   1.3223440647125244   \n",
+       "cvxnonsep_normcon30r    (60, 15, 0)    (31, 30, 15, 15)   1.8771684169769287   \n",
+       "ex4                    (36, 25, 25)     (30, 25, 25, 0)                    0   \n",
+       "ex1223a                   (7, 4, 4)        (9, 4, 4, 0)                    0   \n",
+       "ringpack_10_1          (70, 50, 50)  (385, 330, 330, 0)                    0   \n",
+       "smallinvDAXr1b150-165   (31, 30, 0)        (4, 1, 1, 1)  0.24251556396484375   \n",
        "\n",
-       "                                   time SOR                obj    constr_value  \n",
-       "cvxnonsep_normcon20r    0.07811188697814941     -14.6549272394            -inf  \n",
-       "cvxnonsep_normcon30r     0.0781407356262207     -14.8031228018            -inf  \n",
-       "ex4                     0.07814168930053711     -6.70152492653            -inf  \n",
-       "ex1223a                  0.0781400203704834      6.06978727803            -inf  \n",
-       "ringpack_10_1            0.6116049289703369  -4.17164353115092            -inf  \n",
-       "smallinvDAXr1b150-165  0.062482595443725586      224.691303163  -124.027294155  "
+       "                                  time SOR                obj    constr_value  \n",
+       "cvxnonsep_normcon20r    0.0938119888305664     -14.6549272394            -inf  \n",
+       "cvxnonsep_normcon30r   0.09380459785461426     -14.8031228018            -inf  \n",
+       "ex4                    0.09373617172241211     -6.70152492653            -inf  \n",
+       "ex1223a                0.06250691413879395      6.06978727803            -inf  \n",
+       "ringpack_10_1           0.6323020458221436  -4.17164353115092            -inf  \n",
+       "smallinvDAXr1b150-165   0.0624847412109375      224.691303163  -124.027294155  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
