--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,18 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "result = load_obj('result_overview')"
+    "result = load_obj('intermediate_results')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -68,108 +68,174 @@
        "      <th>time SOR</th>\n",
        "      <th>obj</th>\n",
        "      <th>constr_value</th>\n",
-       "      <th>time_bonmin</th>\n",
-       "      <th>obj_bonmin</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>autocorr_bern20_03</th>\n",
+       "      <td>(21, 20, 20)</td>\n",
+       "      <td>(1, 1, 1, 1)</td>\n",
+       "      <td>0.13260769844055176</td>\n",
+       "      <td>0.12097907066345215</td>\n",
+       "      <td>-3.98880458252</td>\n",
+       "      <td>-60.0111954175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>autocorr_bern25_03</th>\n",
+       "      <td>(26, 25, 25)</td>\n",
+       "      <td>(1, 1, 1, 1)</td>\n",
+       "      <td>0.12578964233398438</td>\n",
+       "      <td>0.13293814659118652</td>\n",
+       "      <td>-29.9832063571</td>\n",
+       "      <td>-58.0167936429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>cvxnonsep_normcon20r</th>\n",
        "      <td>(40, 10, 0)</td>\n",
        "      <td>(21, 20, 10, 10)</td>\n",
-       "      <td>1.3052077293395996</td>\n",
-       "      <td>0.0816507339477539</td>\n",
+       "      <td>1.370636224746704</td>\n",
+       "      <td>0.05471634864807129</td>\n",
        "      <td>-14.6549272394</td>\n",
        "      <td>-inf</td>\n",
-       "      <td>0.282246</td>\n",
-       "      <td>-15.262740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cvxnonsep_normcon30r</th>\n",
        "      <td>(60, 15, 0)</td>\n",
        "      <td>(31, 30, 15, 15)</td>\n",
-       "      <td>1.8531317710876465</td>\n",
-       "      <td>0.07815122604370117</td>\n",
+       "      <td>1.960383415222168</td>\n",
+       "      <td>0.07398271560668945</td>\n",
        "      <td>-14.8031228018</td>\n",
        "      <td>-inf</td>\n",
-       "      <td>0.186782</td>\n",
-       "      <td>-22.712540</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ex4</th>\n",
-       "      <td>(36, 25, 25)</td>\n",
-       "      <td>(30, 25, 25, 0)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.07811260223388672</td>\n",
-       "      <td>-6.70152492653</td>\n",
+       "      <th>cvxnonsep_normcon40r</th>\n",
+       "      <td>(80, 20, 0)</td>\n",
+       "      <td>(41, 40, 20, 20)</td>\n",
+       "      <td>2.65792179107666</td>\n",
+       "      <td>0.1396946907043457</td>\n",
+       "      <td>inf</td>\n",
        "      <td>-inf</td>\n",
-       "      <td>1.555873</td>\n",
-       "      <td>-6.864137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ex1223a</th>\n",
-       "      <td>(7, 4, 4)</td>\n",
-       "      <td>(9, 4, 4, 0)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.09380674362182617</td>\n",
-       "      <td>6.06978727803</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.181516</td>\n",
-       "      <td>4.579582</td>\n",
+       "      <th>edgecross10-020</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>0.2005918025970459</td>\n",
+       "      <td>0.8355615139007568</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>85.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ringpack_10_1</th>\n",
-       "      <td>(70, 50, 50)</td>\n",
-       "      <td>(385, 330, 330, 0)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.6109938621520996</td>\n",
-       "      <td>-4.17164353115092</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>2.234720</td>\n",
-       "      <td>-8.343287</td>\n",
+       "      <th>edgecross10-030</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>0.3959691524505615</td>\n",
+       "      <td>1.2028968334197998</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>184.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>smallinvDAXr1b150-165</th>\n",
-       "      <td>(31, 30, 0)</td>\n",
-       "      <td>(4, 1, 1, 1)</td>\n",
-       "      <td>0.2511715888977051</td>\n",
-       "      <td>0.07285046577453613</td>\n",
-       "      <td>224.691303163</td>\n",
-       "      <td>-124.027294155</td>\n",
-       "      <td>14.190041</td>\n",
-       "      <td>164.970025</td>\n",
+       "      <th>edgecross10-040</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>1.6568973064422607</td>\n",
+       "      <td>1.8617093563079834</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>338.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>edgecross10-050</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>10.346426486968994</td>\n",
+       "      <td>1.6496565341949463</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>527.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>edgecross10-070</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>176.1004137992859</td>\n",
+       "      <td>1.2129008769989014</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1013.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>edgecross10-090</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>0.4197981357574463</td>\n",
+       "      <td>1.8929805755615234</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1646.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>edgecross10_010</th>\n",
+       "      <td>(91, 90, 90)</td>\n",
+       "      <td>(481, 1, 1, 1)</td>\n",
+       "      <td>0.15532779693603516</td>\n",
+       "      <td>0.5733177661895752</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>edgecross14-019</th>\n",
+       "      <td>(183, 182, 182)</td>\n",
+       "      <td>(1457, 1, 1, 1)</td>\n",
+       "      <td>0.29665064811706543</td>\n",
+       "      <td>19.1575026512146</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>edgecross14-058</th>\n",
+       "      <td>(183, 182, 182)</td>\n",
+       "      <td>(1457, 1, 1, 1)</td>\n",
+       "      <td>860.6315641403198</td>\n",
+       "      <td>43.73772192001343</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>692.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               vars             constrs              time L  \\\n",
-       "cvxnonsep_normcon20r    (40, 10, 0)    (21, 20, 10, 10)  1.3052077293395996   \n",
-       "cvxnonsep_normcon30r    (60, 15, 0)    (31, 30, 15, 15)  1.8531317710876465   \n",
-       "ex4                    (36, 25, 25)     (30, 25, 25, 0)                   0   \n",
-       "ex1223a                   (7, 4, 4)        (9, 4, 4, 0)                   0   \n",
-       "ringpack_10_1          (70, 50, 50)  (385, 330, 330, 0)                   0   \n",
-       "smallinvDAXr1b150-165   (31, 30, 0)        (4, 1, 1, 1)  0.2511715888977051   \n",
+       "                                 vars           constrs               time L  \\\n",
+       "autocorr_bern20_03       (21, 20, 20)      (1, 1, 1, 1)  0.13260769844055176   \n",
+       "autocorr_bern25_03       (26, 25, 25)      (1, 1, 1, 1)  0.12578964233398438   \n",
+       "cvxnonsep_normcon20r      (40, 10, 0)  (21, 20, 10, 10)    1.370636224746704   \n",
+       "cvxnonsep_normcon30r      (60, 15, 0)  (31, 30, 15, 15)    1.960383415222168   \n",
+       "cvxnonsep_normcon40r      (80, 20, 0)  (41, 40, 20, 20)     2.65792179107666   \n",
+       "edgecross10-020          (91, 90, 90)    (481, 1, 1, 1)   0.2005918025970459   \n",
+       "edgecross10-030          (91, 90, 90)    (481, 1, 1, 1)   0.3959691524505615   \n",
+       "edgecross10-040          (91, 90, 90)    (481, 1, 1, 1)   1.6568973064422607   \n",
+       "edgecross10-050          (91, 90, 90)    (481, 1, 1, 1)   10.346426486968994   \n",
+       "edgecross10-070          (91, 90, 90)    (481, 1, 1, 1)    176.1004137992859   \n",
+       "edgecross10-090          (91, 90, 90)    (481, 1, 1, 1)   0.4197981357574463   \n",
+       "edgecross10_010          (91, 90, 90)    (481, 1, 1, 1)  0.15532779693603516   \n",
+       "edgecross14-019       (183, 182, 182)   (1457, 1, 1, 1)  0.29665064811706543   \n",
+       "edgecross14-058       (183, 182, 182)   (1457, 1, 1, 1)    860.6315641403198   \n",
        "\n",
-       "                                  time SOR                obj    constr_value  \\\n",
-       "cvxnonsep_normcon20r    0.0816507339477539     -14.6549272394            -inf   \n",
-       "cvxnonsep_normcon30r   0.07815122604370117     -14.8031228018            -inf   \n",
-       "ex4                    0.07811260223388672     -6.70152492653            -inf   \n",
-       "ex1223a                0.09380674362182617      6.06978727803            -inf   \n",
-       "ringpack_10_1           0.6109938621520996  -4.17164353115092            -inf   \n",
-       "smallinvDAXr1b150-165  0.07285046577453613      224.691303163  -124.027294155   \n",
-       "\n",
-       "                       time_bonmin  obj_bonmin  \n",
-       "cvxnonsep_normcon20r      0.282246  -15.262740  \n",
-       "cvxnonsep_normcon30r      0.186782  -22.712540  \n",
-       "ex4                       1.555873   -6.864137  \n",
-       "ex1223a                   0.181516    4.579582  \n",
-       "ringpack_10_1             2.234720   -8.343287  \n",
-       "smallinvDAXr1b150-165    14.190041  164.970025  "
+       "                                 time SOR             obj    constr_value  \n",
+       "autocorr_bern20_03    0.12097907066345215  -3.98880458252  -60.0111954175  \n",
+       "autocorr_bern25_03    0.13293814659118652  -29.9832063571  -58.0167936429  \n",
+       "cvxnonsep_normcon20r  0.05471634864807129  -14.6549272394            -inf  \n",
+       "cvxnonsep_normcon30r  0.07398271560668945  -14.8031228018            -inf  \n",
+       "cvxnonsep_normcon40r   0.1396946907043457             inf            -inf  \n",
+       "edgecross10-020        0.8355615139007568             inf            85.0  \n",
+       "edgecross10-030        1.2028968334197998             inf           184.0  \n",
+       "edgecross10-040        1.8617093563079834             inf           338.0  \n",
+       "edgecross10-050        1.6496565341949463             inf           527.0  \n",
+       "edgecross10-070        1.2129008769989014             inf          1013.0  \n",
+       "edgecross10-090        1.8929805755615234             inf          1646.0  \n",
+       "edgecross10_010        0.5733177661895752             inf            12.0  \n",
+       "edgecross14-019          19.1575026512146             inf            49.0  \n",
+       "edgecross14-058         43.73772192001343             inf           692.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
