add time limit to SOR. Delete old version of Lipschitz computation

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,170 +72,82 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>autocorr_bern20_03</th>\n",
-       "      <td>(21, 20, 20)</td>\n",
-       "      <td>(1, 1, 1, 1)</td>\n",
-       "      <td>0.13260769844055176</td>\n",
-       "      <td>0.12097907066345215</td>\n",
-       "      <td>-3.98880458252</td>\n",
-       "      <td>-60.0111954175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>autocorr_bern25_03</th>\n",
-       "      <td>(26, 25, 25)</td>\n",
-       "      <td>(1, 1, 1, 1)</td>\n",
-       "      <td>0.12578964233398438</td>\n",
-       "      <td>0.13293814659118652</td>\n",
-       "      <td>-29.9832063571</td>\n",
-       "      <td>-58.0167936429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cvxnonsep_normcon20r</th>\n",
-       "      <td>(40, 10, 0)</td>\n",
-       "      <td>(21, 20, 10, 10)</td>\n",
-       "      <td>1.370636224746704</td>\n",
-       "      <td>0.05471634864807129</td>\n",
-       "      <td>-14.6549272394</td>\n",
+       "      <th>ex1223a</th>\n",
+       "      <td>(7, 4, 4)</td>\n",
+       "      <td>(9, 4, 4, 0)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.08883237838745117</td>\n",
+       "      <td>6.06978727803</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>cvxnonsep_normcon30r</th>\n",
-       "      <td>(60, 15, 0)</td>\n",
-       "      <td>(31, 30, 15, 15)</td>\n",
-       "      <td>1.960383415222168</td>\n",
-       "      <td>0.07398271560668945</td>\n",
-       "      <td>-14.8031228018</td>\n",
-       "      <td>-inf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cvxnonsep_normcon40r</th>\n",
-       "      <td>(80, 20, 0)</td>\n",
-       "      <td>(41, 40, 20, 20)</td>\n",
-       "      <td>2.65792179107666</td>\n",
-       "      <td>0.1396946907043457</td>\n",
+       "      <th>ex1263a</th>\n",
+       "      <td>(24, 24, 4)</td>\n",
+       "      <td>(35, 4, 4, 4)</td>\n",
+       "      <td>0.6177055835723877</td>\n",
+       "      <td>0.16628646850585938</td>\n",
        "      <td>inf</td>\n",
        "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>edgecross10-020</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>0.2005918025970459</td>\n",
-       "      <td>0.8355615139007568</td>\n",
+       "      <th>ex1264a</th>\n",
+       "      <td>(24, 24, 4)</td>\n",
+       "      <td>(35, 4, 4, 4)</td>\n",
+       "      <td>0.5596611499786377</td>\n",
+       "      <td>0.14067363739013672</td>\n",
        "      <td>inf</td>\n",
-       "      <td>85.0</td>\n",
+       "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>edgecross10-030</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>0.3959691524505615</td>\n",
-       "      <td>1.2028968334197998</td>\n",
+       "      <th>ex1265a</th>\n",
+       "      <td>(35, 35, 5)</td>\n",
+       "      <td>(44, 5, 5, 5)</td>\n",
+       "      <td>0.6873941421508789</td>\n",
+       "      <td>0.1562671661376953</td>\n",
        "      <td>inf</td>\n",
-       "      <td>184.0</td>\n",
+       "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>edgecross10-040</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>1.6568973064422607</td>\n",
-       "      <td>1.8617093563079834</td>\n",
+       "      <th>ex1266a</th>\n",
+       "      <td>(48, 48, 6)</td>\n",
+       "      <td>(53, 6, 6, 6)</td>\n",
+       "      <td>0.7341680526733398</td>\n",
+       "      <td>0.10940694808959961</td>\n",
        "      <td>inf</td>\n",
-       "      <td>338.0</td>\n",
+       "      <td>-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>edgecross10-050</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>10.346426486968994</td>\n",
-       "      <td>1.6496565341949463</td>\n",
+       "      <th>faclay20h</th>\n",
+       "      <td>(191, 190, 190)</td>\n",
+       "      <td>(2281, 1, 1, 1)</td>\n",
+       "      <td>253.1641721725464</td>\n",
+       "      <td>12923.78670334816</td>\n",
        "      <td>inf</td>\n",
-       "      <td>527.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross10-070</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>176.1004137992859</td>\n",
-       "      <td>1.2129008769989014</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>1013.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross10-090</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>0.4197981357574463</td>\n",
-       "      <td>1.8929805755615234</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>1646.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross10_010</th>\n",
-       "      <td>(91, 90, 90)</td>\n",
-       "      <td>(481, 1, 1, 1)</td>\n",
-       "      <td>0.15532779693603516</td>\n",
-       "      <td>0.5733177661895752</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross14-019</th>\n",
-       "      <td>(183, 182, 182)</td>\n",
-       "      <td>(1457, 1, 1, 1)</td>\n",
-       "      <td>0.29665064811706543</td>\n",
-       "      <td>19.1575026512146</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>49.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>edgecross14-058</th>\n",
-       "      <td>(183, 182, 182)</td>\n",
-       "      <td>(1457, 1, 1, 1)</td>\n",
-       "      <td>860.6315641403198</td>\n",
-       "      <td>43.73772192001343</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>692.0</td>\n",
+       "      <td>22909.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 vars           constrs               time L  \\\n",
-       "autocorr_bern20_03       (21, 20, 20)      (1, 1, 1, 1)  0.13260769844055176   \n",
-       "autocorr_bern25_03       (26, 25, 25)      (1, 1, 1, 1)  0.12578964233398438   \n",
-       "cvxnonsep_normcon20r      (40, 10, 0)  (21, 20, 10, 10)    1.370636224746704   \n",
-       "cvxnonsep_normcon30r      (60, 15, 0)  (31, 30, 15, 15)    1.960383415222168   \n",
-       "cvxnonsep_normcon40r      (80, 20, 0)  (41, 40, 20, 20)     2.65792179107666   \n",
-       "edgecross10-020          (91, 90, 90)    (481, 1, 1, 1)   0.2005918025970459   \n",
-       "edgecross10-030          (91, 90, 90)    (481, 1, 1, 1)   0.3959691524505615   \n",
-       "edgecross10-040          (91, 90, 90)    (481, 1, 1, 1)   1.6568973064422607   \n",
-       "edgecross10-050          (91, 90, 90)    (481, 1, 1, 1)   10.346426486968994   \n",
-       "edgecross10-070          (91, 90, 90)    (481, 1, 1, 1)    176.1004137992859   \n",
-       "edgecross10-090          (91, 90, 90)    (481, 1, 1, 1)   0.4197981357574463   \n",
-       "edgecross10_010          (91, 90, 90)    (481, 1, 1, 1)  0.15532779693603516   \n",
-       "edgecross14-019       (183, 182, 182)   (1457, 1, 1, 1)  0.29665064811706543   \n",
-       "edgecross14-058       (183, 182, 182)   (1457, 1, 1, 1)    860.6315641403198   \n",
+       "                      vars          constrs              time L  \\\n",
+       "ex1223a          (7, 4, 4)     (9, 4, 4, 0)                   0   \n",
+       "ex1263a        (24, 24, 4)    (35, 4, 4, 4)  0.6177055835723877   \n",
+       "ex1264a        (24, 24, 4)    (35, 4, 4, 4)  0.5596611499786377   \n",
+       "ex1265a        (35, 35, 5)    (44, 5, 5, 5)  0.6873941421508789   \n",
+       "ex1266a        (48, 48, 6)    (53, 6, 6, 6)  0.7341680526733398   \n",
+       "faclay20h  (191, 190, 190)  (2281, 1, 1, 1)   253.1641721725464   \n",
        "\n",
-       "                                 time SOR             obj    constr_value  \n",
-       "autocorr_bern20_03    0.12097907066345215  -3.98880458252  -60.0111954175  \n",
-       "autocorr_bern25_03    0.13293814659118652  -29.9832063571  -58.0167936429  \n",
-       "cvxnonsep_normcon20r  0.05471634864807129  -14.6549272394            -inf  \n",
-       "cvxnonsep_normcon30r  0.07398271560668945  -14.8031228018            -inf  \n",
-       "cvxnonsep_normcon40r   0.1396946907043457             inf            -inf  \n",
-       "edgecross10-020        0.8355615139007568             inf            85.0  \n",
-       "edgecross10-030        1.2028968334197998             inf           184.0  \n",
-       "edgecross10-040        1.8617093563079834             inf           338.0  \n",
-       "edgecross10-050        1.6496565341949463             inf           527.0  \n",
-       "edgecross10-070        1.2129008769989014             inf          1013.0  \n",
-       "edgecross10-090        1.8929805755615234             inf          1646.0  \n",
-       "edgecross10_010        0.5733177661895752             inf            12.0  \n",
-       "edgecross14-019          19.1575026512146             inf            49.0  \n",
-       "edgecross14-058         43.73772192001343             inf           692.0  "
+       "                      time SOR            obj constr_value  \n",
+       "ex1223a    0.08883237838745117  6.06978727803         -inf  \n",
+       "ex1263a    0.16628646850585938            inf         -inf  \n",
+       "ex1264a    0.14067363739013672            inf         -inf  \n",
+       "ex1265a     0.1562671661376953            inf         -inf  \n",
+       "ex1266a    0.10940694808959961            inf         -inf  \n",
+       "faclay20h    12923.78670334816            inf      22909.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,18 +162,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
   }
  },
  "nbformat": 4,
