--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -15,13 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "pd.options.display.float_format = '${:,.2f}'.format\n",
     "import numpy as np\n",
     "import pickle\n",
     "def load_obj(name ):\n",
@@ -38,26 +37,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "result = load_obj('intermediate_results')"
+    "result = load_obj('res_overview_small_testset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -68,86 +76,100 @@
        "      <th>time SOR</th>\n",
        "      <th>obj</th>\n",
        "      <th>constr_value</th>\n",
+       "      <th>time_bonmin</th>\n",
+       "      <th>obj_bonmin</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>cvxnonsep_normcon20r</th>\n",
+       "      <td>(40, 10, 0)</td>\n",
+       "      <td>(21, 20, 10, 10)</td>\n",
+       "      <td>$1.73</td>\n",
+       "      <td>$0.08</td>\n",
+       "      <td>$-14.65</td>\n",
+       "      <td>$-inf</td>\n",
+       "      <td>$0.21</td>\n",
+       "      <td>$-15.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cvxnonsep_normcon30r</th>\n",
+       "      <td>(60, 15, 0)</td>\n",
+       "      <td>(31, 30, 15, 15)</td>\n",
+       "      <td>$2.66</td>\n",
+       "      <td>$0.07</td>\n",
+       "      <td>$-14.80</td>\n",
+       "      <td>$-inf</td>\n",
+       "      <td>$0.16</td>\n",
+       "      <td>$-22.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ex4</th>\n",
+       "      <td>(36, 25, 25)</td>\n",
+       "      <td>(30, 25, 25, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$0.06</td>\n",
+       "      <td>$-6.70</td>\n",
+       "      <td>$-inf</td>\n",
+       "      <td>$0.98</td>\n",
+       "      <td>$-6.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>ex1223a</th>\n",
        "      <td>(7, 4, 4)</td>\n",
        "      <td>(9, 4, 4, 0)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.08883237838745117</td>\n",
-       "      <td>6.06978727803</td>\n",
-       "      <td>-inf</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$0.06</td>\n",
+       "      <td>$6.07</td>\n",
+       "      <td>$-inf</td>\n",
+       "      <td>$0.17</td>\n",
+       "      <td>$4.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ex1263a</th>\n",
-       "      <td>(24, 24, 4)</td>\n",
-       "      <td>(35, 4, 4, 4)</td>\n",
-       "      <td>0.6177055835723877</td>\n",
-       "      <td>0.16628646850585938</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>-inf</td>\n",
+       "      <th>ringpack_10_1</th>\n",
+       "      <td>(70, 50, 50)</td>\n",
+       "      <td>(385, 330, 330, 0)</td>\n",
+       "      <td>$0.00</td>\n",
+       "      <td>$0.47</td>\n",
+       "      <td>$-4.17</td>\n",
+       "      <td>$-inf</td>\n",
+       "      <td>$2.65</td>\n",
+       "      <td>$-4.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ex1264a</th>\n",
-       "      <td>(24, 24, 4)</td>\n",
-       "      <td>(35, 4, 4, 4)</td>\n",
-       "      <td>0.5596611499786377</td>\n",
-       "      <td>0.14067363739013672</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>-inf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ex1265a</th>\n",
-       "      <td>(35, 35, 5)</td>\n",
-       "      <td>(44, 5, 5, 5)</td>\n",
-       "      <td>0.6873941421508789</td>\n",
-       "      <td>0.1562671661376953</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>-inf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ex1266a</th>\n",
-       "      <td>(48, 48, 6)</td>\n",
-       "      <td>(53, 6, 6, 6)</td>\n",
-       "      <td>0.7341680526733398</td>\n",
-       "      <td>0.10940694808959961</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>-inf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>faclay20h</th>\n",
-       "      <td>(191, 190, 190)</td>\n",
-       "      <td>(2281, 1, 1, 1)</td>\n",
-       "      <td>253.1641721725464</td>\n",
-       "      <td>12923.78670334816</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>22909.0</td>\n",
+       "      <th>smallinvDAXr1b150-165</th>\n",
+       "      <td>(31, 30, 0)</td>\n",
+       "      <td>(4, 1, 1, 1)</td>\n",
+       "      <td>$0.20</td>\n",
+       "      <td>$0.05</td>\n",
+       "      <td>$224.69</td>\n",
+       "      <td>$-124.03</td>\n",
+       "      <td>$14.89</td>\n",
+       "      <td>$164.97</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      vars          constrs              time L  \\\n",
-       "ex1223a          (7, 4, 4)     (9, 4, 4, 0)                   0   \n",
-       "ex1263a        (24, 24, 4)    (35, 4, 4, 4)  0.6177055835723877   \n",
-       "ex1264a        (24, 24, 4)    (35, 4, 4, 4)  0.5596611499786377   \n",
-       "ex1265a        (35, 35, 5)    (44, 5, 5, 5)  0.6873941421508789   \n",
-       "ex1266a        (48, 48, 6)    (53, 6, 6, 6)  0.7341680526733398   \n",
-       "faclay20h  (191, 190, 190)  (2281, 1, 1, 1)   253.1641721725464   \n",
+       "                               vars             constrs  time L  time SOR  \\\n",
+       "cvxnonsep_normcon20r    (40, 10, 0)    (21, 20, 10, 10)   $1.73     $0.08   \n",
+       "cvxnonsep_normcon30r    (60, 15, 0)    (31, 30, 15, 15)   $2.66     $0.07   \n",
+       "ex4                    (36, 25, 25)     (30, 25, 25, 0)   $0.00     $0.06   \n",
+       "ex1223a                   (7, 4, 4)        (9, 4, 4, 0)   $0.00     $0.06   \n",
+       "ringpack_10_1          (70, 50, 50)  (385, 330, 330, 0)   $0.00     $0.47   \n",
+       "smallinvDAXr1b150-165   (31, 30, 0)        (4, 1, 1, 1)   $0.20     $0.05   \n",
        "\n",
-       "                      time SOR            obj constr_value  \n",
-       "ex1223a    0.08883237838745117  6.06978727803         -inf  \n",
-       "ex1263a    0.16628646850585938            inf         -inf  \n",
-       "ex1264a    0.14067363739013672            inf         -inf  \n",
-       "ex1265a     0.1562671661376953            inf         -inf  \n",
-       "ex1266a    0.10940694808959961            inf         -inf  \n",
-       "faclay20h    12923.78670334816            inf      22909.0  "
+       "                          obj  constr_value  time_bonmin  obj_bonmin  \n",
+       "cvxnonsep_normcon20r  $-14.65         $-inf        $0.21     $-15.26  \n",
+       "cvxnonsep_normcon30r  $-14.80         $-inf        $0.16     $-22.71  \n",
+       "ex4                    $-6.70         $-inf        $0.98      $-6.86  \n",
+       "ex1223a                 $6.07         $-inf        $0.17       $4.58  \n",
+       "ringpack_10_1          $-4.17         $-inf        $2.65      $-4.17  \n",
+       "smallinvDAXr1b150-165 $224.69      $-124.03       $14.89     $164.97  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,6 +177,13 @@
    "source": [
     "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -162,8 +191,20 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
