starting to work on enlargement nonlinear

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# An inner parallel cutting plane method for convex mixed-integer optimization problems \n",
+    "# Granularity in mixed-integer nonlinear optimization\n",
     "\n",
     "## Summary of the document\n",
     "\n",
