add logging instead of print commands

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results =load_obj('intermediate_results')"
+    "results =load_obj('res_SOR_overview_all_instances')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,27 +104,115 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>smallinvDAXr1b150-165</th>\n",
-       "      <td>(31, 30, 0)</td>\n",
-       "      <td>(4, 1, 1, 1)</td>\n",
-       "      <td>$0.28</td>\n",
-       "      <td>$0.10</td>\n",
-       "      <td>$224.69</td>\n",
-       "      <td>$-124.03</td>\n",
+       "      <th>sonet17v4</th>\n",
+       "      <td>(136, 136, 136)</td>\n",
+       "      <td>(2057, 17, 17, 17)</td>\n",
+       "      <td>$2.32</td>\n",
+       "      <td>$6.39</td>\n",
+       "      <td>$1,816,146.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet18v6</th>\n",
+       "      <td>(153, 153, 153)</td>\n",
+       "      <td>(2466, 18, 18, 18)</td>\n",
+       "      <td>$2.60</td>\n",
+       "      <td>$19.58</td>\n",
+       "      <td>$6,925,440.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet19v5</th>\n",
+       "      <td>(171, 171, 171)</td>\n",
+       "      <td>(2926, 19, 19, 19)</td>\n",
+       "      <td>$2.82</td>\n",
+       "      <td>$20.42</td>\n",
+       "      <td>$4,806,792.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet20v6</th>\n",
+       "      <td>(190, 190, 190)</td>\n",
+       "      <td>(3440, 20, 20, 20)</td>\n",
+       "      <td>$3.02</td>\n",
+       "      <td>$36.71</td>\n",
+       "      <td>$9,245,610.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet21v6</th>\n",
+       "      <td>(210, 210, 210)</td>\n",
+       "      <td>(4011, 21, 21, 21)</td>\n",
+       "      <td>$3.30</td>\n",
+       "      <td>$62.79</td>\n",
+       "      <td>$10,674,610.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet22v4</th>\n",
+       "      <td>(231, 231, 231)</td>\n",
+       "      <td>(4642, 22, 22, 22)</td>\n",
+       "      <td>$3.62</td>\n",
+       "      <td>$123.14</td>\n",
+       "      <td>$3,408,192.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet23v6</th>\n",
+       "      <td>(253, 253, 253)</td>\n",
+       "      <td>(5336, 23, 23, 23)</td>\n",
+       "      <td>$3.94</td>\n",
+       "      <td>$162.24</td>\n",
+       "      <td>$12,764,340.00</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet24v2</th>\n",
+       "      <td>(276, 276, 276)</td>\n",
+       "      <td>(6096, 24, 24, 24)</td>\n",
+       "      <td>$4.26</td>\n",
+       "      <td>$636.13</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sonet25v5</th>\n",
+       "      <td>(300, 300, 300)</td>\n",
+       "      <td>(6925, 25, 25, 25)</td>\n",
+       "      <td>$4.66</td>\n",
+       "      <td>$617.19</td>\n",
+       "      <td>$inf</td>\n",
+       "      <td>$-inf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              vars       constrs  time L  time SOR     obj  \\\n",
-       "smallinvDAXr1b150-165  (31, 30, 0)  (4, 1, 1, 1)   $0.28     $0.10 $224.69   \n",
+       "                      vars             constrs  time L  time SOR  \\\n",
+       "sonet17v4  (136, 136, 136)  (2057, 17, 17, 17)   $2.32     $6.39   \n",
+       "sonet18v6  (153, 153, 153)  (2466, 18, 18, 18)   $2.60    $19.58   \n",
+       "sonet19v5  (171, 171, 171)  (2926, 19, 19, 19)   $2.82    $20.42   \n",
+       "sonet20v6  (190, 190, 190)  (3440, 20, 20, 20)   $3.02    $36.71   \n",
+       "sonet21v6  (210, 210, 210)  (4011, 21, 21, 21)   $3.30    $62.79   \n",
+       "sonet22v4  (231, 231, 231)  (4642, 22, 22, 22)   $3.62   $123.14   \n",
+       "sonet23v6  (253, 253, 253)  (5336, 23, 23, 23)   $3.94   $162.24   \n",
+       "sonet24v2  (276, 276, 276)  (6096, 24, 24, 24)   $4.26   $636.13   \n",
+       "sonet25v5  (300, 300, 300)  (6925, 25, 25, 25)   $4.66   $617.19   \n",
        "\n",
-       "                       constr_value  \n",
-       "smallinvDAXr1b150-165      $-124.03  "
+       "                     obj  constr_value  \n",
+       "sonet17v4  $1,816,146.00         $-inf  \n",
+       "sonet18v6  $6,925,440.00         $-inf  \n",
+       "sonet19v5  $4,806,792.00         $-inf  \n",
+       "sonet20v6  $9,245,610.00         $-inf  \n",
+       "sonet21v6 $10,674,610.00         $-inf  \n",
+       "sonet22v4  $3,408,192.00         $-inf  \n",
+       "sonet23v6 $12,764,340.00         $-inf  \n",
+       "sonet24v2           $inf         $-inf  \n",
+       "sonet25v5           $inf         $-inf  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
