add bonmin script and way to extract the data of SOR in Evaluation paper.

--- a/results/Evaluation_Paper.ipynb
+++ b/results/Evaluation_Paper.ipynb
@@ -61,16 +61,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results =load_obj('SOR_all_instances_0.9999')"
+    "def store_FRA_results_for_Bonmin(name_results ='res_SOR_overview_all_instances' ):\n",
+    "    results = load_obj(name_results)\n",
+    "    pseudo_granular_results = results[results['obj']!=float('inf')]\n",
+    "    np.save('vals_SOR',np.array(pseudo_granular_results['obj']))\n",
+    "    testbed = list(pseudo_granular_results.index)\n",
+    "    with open(r'../testbed/SOR_succ.txt', 'w') as f:\n",
+    "        for item in testbed:\n",
+    "            f.write(\"%s\\n\" % item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "store_FRA_results_for_Bonmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sonet17v4',\n",
+       " 'sonet18v6',\n",
+       " 'sonet19v5',\n",
+       " 'sonet20v6',\n",
+       " 'sonet21v6',\n",
+       " 'sonet22v4',\n",
+       " 'sonet23v6']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(results[results['obj']!=float('inf')].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = load_obj('res_SOR_overview_all_instances')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -104,92 +155,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>st_e13</th>\n",
-       "      <td>(2, 1, 1)</td>\n",
-       "      <td>(2, 1, 1, 0)</td>\n",
-       "      <td>$0.00</td>\n",
-       "      <td>$0.05</td>\n",
-       "      <td>$inf</td>\n",
-       "      <td>$1.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>supplychain</th>\n",
-       "      <td>(27, 3, 3)</td>\n",
-       "      <td>(30, 6, 0, 0)</td>\n",
-       "      <td>$0.00</td>\n",
-       "      <td>$0.17</td>\n",
-       "      <td>$2,288.16</td>\n",
+       "      <th>sonet17v4</th>\n",
+       "      <td>(136, 136, 136)</td>\n",
+       "      <td>(2057, 17, 17, 17)</td>\n",
+       "      <td>$2.32</td>\n",
+       "      <td>$6.39</td>\n",
+       "      <td>$1,816,146.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tln12</th>\n",
-       "      <td>(168, 168, 12)</td>\n",
-       "      <td>(72, 12, 12, 12)</td>\n",
-       "      <td>$2.21</td>\n",
-       "      <td>$0.13</td>\n",
-       "      <td>$inf</td>\n",
+       "      <th>sonet18v6</th>\n",
+       "      <td>(153, 153, 153)</td>\n",
+       "      <td>(2466, 18, 18, 18)</td>\n",
+       "      <td>$2.60</td>\n",
+       "      <td>$19.58</td>\n",
+       "      <td>$6,925,440.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tln2</th>\n",
-       "      <td>(8, 8, 2)</td>\n",
-       "      <td>(12, 2, 2, 2)</td>\n",
-       "      <td>$0.39</td>\n",
-       "      <td>$0.08</td>\n",
-       "      <td>$inf</td>\n",
+       "      <th>sonet19v5</th>\n",
+       "      <td>(171, 171, 171)</td>\n",
+       "      <td>(2926, 19, 19, 19)</td>\n",
+       "      <td>$2.82</td>\n",
+       "      <td>$20.42</td>\n",
+       "      <td>$4,806,792.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tln4</th>\n",
-       "      <td>(24, 24, 4)</td>\n",
-       "      <td>(24, 4, 4, 4)</td>\n",
-       "      <td>$0.71</td>\n",
-       "      <td>$0.08</td>\n",
-       "      <td>$inf</td>\n",
+       "      <th>sonet20v6</th>\n",
+       "      <td>(190, 190, 190)</td>\n",
+       "      <td>(3440, 20, 20, 20)</td>\n",
+       "      <td>$3.02</td>\n",
+       "      <td>$36.71</td>\n",
+       "      <td>$9,245,610.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tln5</th>\n",
-       "      <td>(35, 35, 5)</td>\n",
-       "      <td>(30, 5, 5, 5)</td>\n",
-       "      <td>$0.87</td>\n",
-       "      <td>$0.16</td>\n",
-       "      <td>$inf</td>\n",
+       "      <th>sonet21v6</th>\n",
+       "      <td>(210, 210, 210)</td>\n",
+       "      <td>(4011, 21, 21, 21)</td>\n",
+       "      <td>$3.30</td>\n",
+       "      <td>$62.79</td>\n",
+       "      <td>$10,674,610.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tln6</th>\n",
-       "      <td>(48, 48, 6)</td>\n",
-       "      <td>(36, 6, 6, 6)</td>\n",
-       "      <td>$1.05</td>\n",
-       "      <td>$0.17</td>\n",
-       "      <td>$inf</td>\n",
+       "      <th>sonet22v4</th>\n",
+       "      <td>(231, 231, 231)</td>\n",
+       "      <td>(4642, 22, 22, 22)</td>\n",
+       "      <td>$3.62</td>\n",
+       "      <td>$123.14</td>\n",
+       "      <td>$3,408,192.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tln7</th>\n",
-       "      <td>(63, 63, 7)</td>\n",
-       "      <td>(42, 7, 7, 7)</td>\n",
-       "      <td>$1.29</td>\n",
-       "      <td>$0.20</td>\n",
-       "      <td>$inf</td>\n",
+       "      <th>sonet23v6</th>\n",
+       "      <td>(253, 253, 253)</td>\n",
+       "      <td>(5336, 23, 23, 23)</td>\n",
+       "      <td>$3.94</td>\n",
+       "      <td>$162.24</td>\n",
+       "      <td>$12,764,340.00</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tloss</th>\n",
-       "      <td>(48, 48, 6)</td>\n",
-       "      <td>(53, 6, 6, 6)</td>\n",
-       "      <td>$1.11</td>\n",
-       "      <td>$0.11</td>\n",
+       "      <th>sonet24v2</th>\n",
+       "      <td>(276, 276, 276)</td>\n",
+       "      <td>(6096, 24, 24, 24)</td>\n",
+       "      <td>$4.26</td>\n",
+       "      <td>$636.13</td>\n",
        "      <td>$inf</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>tltr</th>\n",
-       "      <td>(48, 48, 12)</td>\n",
-       "      <td>(54, 3, 3, 3)</td>\n",
-       "      <td>$0.57</td>\n",
-       "      <td>$0.22</td>\n",
+       "      <th>sonet25v5</th>\n",
+       "      <td>(300, 300, 300)</td>\n",
+       "      <td>(6925, 25, 25, 25)</td>\n",
+       "      <td>$4.66</td>\n",
+       "      <td>$617.19</td>\n",
        "      <td>$inf</td>\n",
        "      <td>$-inf</td>\n",
        "    </tr>\n",
@@ -198,38 +240,45 @@
        "</div>"
       ],
       "text/plain": [
-       "                       vars           constrs  time L  time SOR       obj  \\\n",
-       "st_e13            (2, 1, 1)      (2, 1, 1, 0)   $0.00     $0.05      $inf   \n",
-       "supplychain      (27, 3, 3)     (30, 6, 0, 0)   $0.00     $0.17 $2,288.16   \n",
-       "tln12        (168, 168, 12)  (72, 12, 12, 12)   $2.21     $0.13      $inf   \n",
-       "tln2              (8, 8, 2)     (12, 2, 2, 2)   $0.39     $0.08      $inf   \n",
-       "tln4            (24, 24, 4)     (24, 4, 4, 4)   $0.71     $0.08      $inf   \n",
-       "tln5            (35, 35, 5)     (30, 5, 5, 5)   $0.87     $0.16      $inf   \n",
-       "tln6            (48, 48, 6)     (36, 6, 6, 6)   $1.05     $0.17      $inf   \n",
-       "tln7            (63, 63, 7)     (42, 7, 7, 7)   $1.29     $0.20      $inf   \n",
-       "tloss           (48, 48, 6)     (53, 6, 6, 6)   $1.11     $0.11      $inf   \n",
-       "tltr           (48, 48, 12)     (54, 3, 3, 3)   $0.57     $0.22      $inf   \n",
+       "                      vars             constrs  time L  time SOR  \\\n",
+       "sonet17v4  (136, 136, 136)  (2057, 17, 17, 17)   $2.32     $6.39   \n",
+       "sonet18v6  (153, 153, 153)  (2466, 18, 18, 18)   $2.60    $19.58   \n",
+       "sonet19v5  (171, 171, 171)  (2926, 19, 19, 19)   $2.82    $20.42   \n",
+       "sonet20v6  (190, 190, 190)  (3440, 20, 20, 20)   $3.02    $36.71   \n",
+       "sonet21v6  (210, 210, 210)  (4011, 21, 21, 21)   $3.30    $62.79   \n",
+       "sonet22v4  (231, 231, 231)  (4642, 22, 22, 22)   $3.62   $123.14   \n",
+       "sonet23v6  (253, 253, 253)  (5336, 23, 23, 23)   $3.94   $162.24   \n",
+       "sonet24v2  (276, 276, 276)  (6096, 24, 24, 24)   $4.26   $636.13   \n",
+       "sonet25v5  (300, 300, 300)  (6925, 25, 25, 25)   $4.66   $617.19   \n",
        "\n",
-       "             constr_value  \n",
-       "st_e13              $1.25  \n",
-       "supplychain         $-inf  \n",
-       "tln12               $-inf  \n",
-       "tln2                $-inf  \n",
-       "tln4                $-inf  \n",
-       "tln5                $-inf  \n",
-       "tln6                $-inf  \n",
-       "tln7                $-inf  \n",
-       "tloss               $-inf  \n",
-       "tltr                $-inf  "
+       "                     obj  constr_value  \n",
+       "sonet17v4  $1,816,146.00         $-inf  \n",
+       "sonet18v6  $6,925,440.00         $-inf  \n",
+       "sonet19v5  $4,806,792.00         $-inf  \n",
+       "sonet20v6  $9,245,610.00         $-inf  \n",
+       "sonet21v6 $10,674,610.00         $-inf  \n",
+       "sonet22v4  $3,408,192.00         $-inf  \n",
+       "sonet23v6 $12,764,340.00         $-inf  \n",
+       "sonet24v2           $inf         $-inf  \n",
+       "sonet25v5           $inf         $-inf  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('vals_SOR',np.array(results[results['obj']!=float('inf')]['obj']))"
    ]
   },
   {
